ingress-nginx/nginx-httpd.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-nginx
  namespace: ingress-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: defaultnginx
  template:
    metadata:
      labels:
        app: defaultnginx
    spec:
      containers:
        - name: nginx
          image: shixiaochuangk8s/nginx:1.18
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-httpd
  namespace: ingress-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: defaulthttpd
  template:
    metadata:
      labels:
        app: defaulthttpd
    spec:
      containers:
        - name: httpd
          image: shixiaochuangk8s/httpd:2.2
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: default-nginx
  namespace: ingress-ns
spec:
  selector:
    app: defaultnginx
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: php-apache
  namespace: ingress-ns
spec:
  selector:
    app: defaulthttpd
  ports:
    - port: 80
      targetPort: 80
