ingress-nginx/session-affinity.yaml
apiVersion: v1
kind: Service
metadata:
  name: session-affinity
  namespace: ingress-ns
spec:
  selector:
    app: session-affinity
  type: ClusterIP
  ports:
    - name: affinity
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-affinity
  namespace: ingress-ns
  labels:
    app: session-affinity
spec:
  selector:
    matchLabels:
      app: session-affinity
  replicas: 3
  template:
    metadata:
      labels:
        app: session-affinity
    spec:
      containers:
        - name: session-affinity
          image: shixiaochuangk8s/nginx:1.18
          ports:
            - containerPort: 80
